@@ -41,12 +41,14 @@ BppAncestors::BppAncestors()
 
 bool BppAncestors::testExecutable()
 {
+
     #if defined (__CYGWIN__)
     char path[200];
     int length = readlink("/proc/self/exe",path,200-1);
 
     string epath = string(path).substr(0,length);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
     bppdistpath = epath;
     epath = epath+"bppancestor >/dev/null 2>/dev/null";
     int status = system(epath.c_str());
@@ -66,13 +68,15 @@ bool BppAncestors::testExecutable()
     uint32_t size = sizeof(path);
     _NSGetExecutablePath(path, &size);
     epath = string(path);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
     //epath = "DYLD_LIBRARY_PATH="+epath+" "+epath;
 
     #else
     int length = readlink("/proc/self/exe",path,200-1);
     epath = string(path).substr(0,length);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
 
     #endif
 
