@@ -24,7 +24,8 @@ bool Mafft_alignment::test_executable()
     int length = readlink("/proc/self/exe",path,200-1);
 
     string epath = string(path).substr(0,length);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
     mafftpath = epath;
     epath = epath+"sh.exe "+epath+"mafft -h >/dev/null 2>/dev/null";
     int status = system(epath.c_str());
@@ -43,13 +44,15 @@ bool Mafft_alignment::test_executable()
     uint32_t size = sizeof(path);
     _NSGetExecutablePath(path, &size);
     epath = string(path);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
     //epath = "DYLD_LIBRARY_PATH="+epath+" "+epath;
 
     #else
     int length = readlink("/proc/self/exe",path,200-1);
     epath = string(path).substr(0,length);
-    epath.replace(epath.rfind("prank"),string("prank").size(),string(""));
+    if (epath.find("/")!=std::string::npos)
+        epath = epath.substr(0,epath.rfind("/")+1);
 
     #endif
 
